Finished and debugged add column and overflow scroll autoto project page and added some features (columns added) to Projectpage and fixed some bugs on privateSlice

--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   height: fit-content;
-  margin-right: 14px;
+  /* margin-right: 14px; */
   position: relative;
   width: fit-content;
 }
