--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,4 @@
 .footer {
-  border: solid 1px rgba(255, 255, 255, 0.2);
   text-align: center;
   padding: 12px;
   color: rgba(255, 255, 255, 0.6);
